[package]
name = "nfs"
version = "0.1.0"
edition = "2021"
description = "NFS StorageBackend with stale-mount self-heal — backend-only orca plugin"

[package.metadata.orca]
category = "storage"

[lib]
name = "nfs"
path = "src/lib.rs"
# `rlib` retains the in-crate `#[cfg(test)]` harness + lets a consumer use it
# as a normal Rust lib.
crate-type = ["rlib"]

[[bin]]
name = "nfs"
path = "src/main.rs"

# nfs is a BACKEND-ONLY orca plugin: it carries zero `#[orca_tool]`s and instead
# registers a `storage` StorageBackend across the cdylib FFI seam. Per
# [[feedback-plugin-toolkit-only-no-exceptions]] it reaches the whole orca
# system — infra AND the `storage` domain (`plugin_toolkit::storage`) — through
# `plugin-toolkit` alone.
#
# TODO(phase2-dep-flip): temporary local-path dependency. The typed mount
# contract this plugin now implements — StorageBackend::validate_spec /
# render_options / mount_style plus MountSpec / NormalizedSpec / OptionSet::Nfs /
# SecretRef / register_from_def_styled — lives on orca branch
# `feat/storage-mount-contract-phase1` (PR #121) and is NOT yet on `main` (and
# not currently pushed as a resolvable remote git ref). The prior
# `git = "…/orca", branch = "main"` + `[patch]`-to-local mechanism cannot be used
# here: local orca is plugin-toolkit 0.1.1-rc.21 while `main` still resolves
# 0.1.1-rc.9, and cargo refuses a cross-prerelease `[patch]`, so the patch was
# silently dropped and the phase1 symbols never resolved. Pointing directly at
# the local phase1 checkout is the only mechanism that compiles until #121
# merges. FLIP THIS BACK to `{ git = "https://github.com/argyle-labs/orca",
# branch = "main" }` (or a released tag) once PR #121 lands on main.
[dependencies]
plugin-toolkit = { path = "../orca/projects/plugin-toolkit" }

[dev-dependencies]
# Dev-only: the in-crate test harness writes a fake mount tree (`tempfile`) and
# drives the async `NfsBackend` methods under `#[tokio::test]`. `serde_json` is
# reached through `plugin_toolkit::serde_json`, so it needs no direct dep.
tempfile = "3"
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }

# Match orca's workspace lint floor: discarding a Result/Option via
# `let _ = ...` was a load-bearing past incident, so keep it a hard error here
# too — the plugin must stay portable back into the orca workspace.
[lints.clippy]
let_underscore_must_use = "deny"
