[package]
name = "nfs"
version = "0.1.0"
edition = "2021"
description = "NFS StorageBackend with stale-mount self-heal — backend-only orca plugin"

[package.metadata.orca]
category = "storage"

[lib]
name = "nfs"
path = "src/lib.rs"
# `rlib` retains the in-crate `#[cfg(test)]` harness + lets a consumer use it
# as a normal Rust lib.
crate-type = ["rlib"]

[[bin]]
name = "nfs"
path = "src/main.rs"

# nfs is a BACKEND-ONLY orca plugin: it carries zero `#[orca_tool]`s and instead
# registers a `storage` StorageBackend across the cdylib FFI seam. Per
# [[feedback-plugin-toolkit-only-no-exceptions]] it reaches the whole orca
# system — infra AND the `storage` domain (`plugin_toolkit::storage`) — through
# `plugin-toolkit` alone.
#
# The typed mount contract this plugin implements — StorageBackend::validate_spec
# / render_options / mount_style plus MountSpec / NormalizedSpec / OptionSet::Nfs
# / SecretRef / register_from_def_styled — landed on orca `main` via PR #121, so
# the dep points back at the git source rather than a local checkout.
[dependencies]
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }

[dev-dependencies]
# Dev-only: the in-crate test harness writes a fake mount tree (`tempfile`) and
# drives the async `NfsBackend` methods under `#[tokio::test]`. `serde_json` is
# reached through `plugin_toolkit::serde_json`, so it needs no direct dep.
tempfile = "3"
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }

# Match orca's workspace lint floor: discarding a Result/Option via
# `let _ = ...` was a load-bearing past incident, so keep it a hard error here
# too — the plugin must stay portable back into the orca workspace.
[lints.clippy]
let_underscore_must_use = "deny"
